# local-llm-learning

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/de/raum7/local_llm_learning/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/de/raum7/local_llm_learning/: MainActivity.kt
app/src/main/java/de/raum7/local_llm_learning/data/base/: BaseModel.kt  BaseRepository.kt  BaseUiState.kt  BaseViewModel.kt  BaseViewModelFactory.kt
app/src/main/java/de/raum7/local_llm_learning/data/database/: Database.kt
app/src/main/java/de/raum7/local_llm_learning/data/database/dao/: AnswerDao.kt  LearningMaterialDao.kt  QuestionDao.kt
app/src/main/java/de/raum7/local_llm_learning/data/mock/: MockAnswers.kt  MockLearningMaterials.kt  MockQuestionCounts.kt  MockQuestions.kt  MockQuizResults.kt
app/src/main/java/de/raum7/local_llm_learning/data/models/: Answer.kt  LearningMaterial.kt  Question.kt  QuizResult.kt
app/src/main/java/de/raum7/local_llm_learning/data/parsing/: LearningMaterialJsonParser.kt
app/src/main/java/de/raum7/local_llm_learning/data/store/: LearningMaterialDiskStore.kt  LearningMaterialStore.kt
app/src/main/java/de/raum7/local_llm_learning/llm/: AssistantRepository.kt  LlamaCppEngine.kt  LlamaNative.kt  LlmEngine.kt  LlmGenerationService.kt  ModelInstaller.kt  NotificationHelper.kt
app/src/main/java/de/raum7/local_llm_learning/ui/: Navigation.kt
app/src/main/java/de/raum7/local_llm_learning/ui/components/: AppBar.kt  CreateLearningMaterialEFAB.kt  EmptyPlaceholder.kt  LearningMaterialCard.kt  LearningMaterialCardList.kt  LearningMaterialEmptyPlaceholder.kt
app/src/main/java/de/raum7/local_llm_learning/ui/navigation/: AppNavHost.kt
app/src/main/java/de/raum7/local_llm_learning/ui/pages/: LearningMaterialCreationAssistant.kt  LearningMaterialLibrary.kt  SpacedRepetitionAlgorithmSingleChoiceQuestionBasedQuiz.kt
app/src/main/java/de/raum7/local_llm_learning/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/de/raum7/local_llm_learning/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+79 files in other folders)
